can be made to work correctly)
* Added a dialogue Box
* Added a output Box
(the gui is now self sufficient)
* All known bugs were fixed
* Button alignment was fixed
* All alignment was fixed
* Now program can reload itself either via mode change button or refresh 
button.
* Program quits when there are no guesses left
* Added decimal module to make sure only the correct key will work


Release 1.1:
* Program no longer quits when mode is changed.
* Fixed sleep, removed reset button.
(considering adding it back as a clear console button)
* Setup pack_forget so that the window doesn't jump to the starting
place when the ui is refreshed.
* Platform independance added with #!/usr/bin/python


Release 1.2:
* Added try and except for non-intereger key guesses on default key mode
* Added support for all file types
* Fixed massive ascii bug related to encoding all file types
* Created version for Python 3.x.x


Release 1.3:
* Checks to see if a user key exists before creating a new one.
* Requests old user key before creating new key.


Release 1.4:
* Made an intuitive launcher that determines the version of Python you are 
using and executes the source accordingly.
* Made Crypto.py launcher return a message if it doesn't support the version 
of Python that was attempted. Currently it supports Python 2.7, 3.0, and 3.3
* Create Key now asks if you would like to overwrite an existing key. If the 
user says no it simply switches to the custom key mode with the current user 
key. (If the user says yes, you will have to input the old user key before 
creating a new one)
* Removed possible errors for input == NoneType and for non-existant files
(Both errors that come up when a user presses cancel in Tkinter)
*Fixed a bug that prevented decode from working correctly.
* Added CC Lincense
* K900 gave me code to perform a version check in the same script as the main program
(Now everything fits in one nice small script.)
* Changed to GPLv3 License


END CHANGE LOG