@@ -1,5 +1,5 @@
 #!/usr/bin/python
-'''
+"""
 Crypto - Substitution Cipher
 Copyright 2012 Lars Schweighauser
 
@@ -19,33 +19,36 @@ And for being awesomein general.
 The default key is: 481282871733
 No other number will work in default mode
 python 2.7 compatable 
-'''
+"""
 
 
 Version = "1.4.9"
 Status = "Stable"
 
 from decimal import *
-import sys, codecs
+import sys
+#import codecs
 
 
-if sys.version_info[0] == 2:
-    from Tkinter import *
-    from tkMessageBox import askquestion
-    from tkSimpleDialog import askstring
-    import tkFileDialog
+if sys.version_info[0] == 2 and sys.version_info[1] >= 7:
+	
+	from io import open
+	from Tkinter import *
+	from tkMessageBox import askquestion
+	from tkSimpleDialog import askstring
+	import tkFileDialog
     
     
 elif sys.version_info[0] == 3:
-    from tkinter import *
-    from tkinter.messagebox import askquestion
-    from tkinter.simpledialog import askstring
-    import tkinter.filedialog as tkFileDialog
+	from tkinter import *
+	from tkinter.messagebox import askquestion
+	from tkinter.simpledialog import askstring
+	import tkinter.filedialog as tkFileDialog
     
     
 else:
-    print("90s called and said it wanted its Python 1 back!")
-    sys.exit(1)
+	print("The 90s called and said they wanted their Python " + str(sys.version[:5]) + " back!\n")
+	sys.exit(1)
 
 
 getcontext().prec = 100
@@ -62,10 +65,10 @@ class Encrypt():
 	
 		result = ""
 		
-		for item in string:
-			str_ord = ord(item)
+		for char in string:
+			str_ord = ord(char)
 		
-			if str_ord >= 247 and str_ord <= 256:
+			if 247 <= str_ord <= 256:
 				str_chr = str_ord - 215
 
 			elif str_ord >= 32:
@@ -78,55 +81,53 @@ class Encrypt():
 		return result
 
 
-	def Encode_File(self, file):
+	def encode_file(self, file):
 	
-		result = ""
-		file_read = codecs.open(file, 'r', encoding="utf-8")
+		encode_result = ""
+		file_read = open(file, 'r')
 		lines = file_read.readlines()
 
-		for item in lines:
-			result += self.encode(item)
+		for l in lines:
+			encode_result += self.encode(l)
 	
 		file_read.close()
 	
-		file_write = codecs.open(file, 'w', encoding="utf-8")
-		print_result = result + "\n"
-		file_write.writelines(result)
-		start.gui.write(print_result)
+		file_write = open(file, 'w')
+		file_write.writelines(encode_result)
+		Start.GUI.write(encode_result + "\n")
 
 
-	def decode(self, key_guess, result):
+	def decode(self, key_guess, line):
 	
-		new_result = ""
+		decode_result = ""
 		real_key = (int(key_guess) / 53475874637)
 
-		for item in result:
-			str_ord = ord(item)
+		for char in line:
+			str_ord = ord(char)
 			
-			if str_ord >= 32 and str_ord <= 41:
+			if 32 <= str_ord <= 41:
 				str_chr = str_ord + int(real_key) + 206
-				new_result += chr(str_chr)	
+				decode_result += chr(str_chr)	
 				
 			elif str_ord >= 42:
 				str_chr = str_ord - int(real_key) - 1
-				new_result += chr(str_chr)	
+				decode_result += chr(str_chr)	
 				
 			else:
 				str_chr = str_ord
-				new_result += chr(str_chr)	
+				decode_result += chr(str_chr)	
 
-		return new_result
+		return decode_result
 
 
-	def Decode_File(self, file, guess_numb):
+	def decode_file(self, file, guess_numb):
 		result = ""
 		
 				
-		key_guess = start.gui.get_string("Guess", "Give me a key to try:")
+		key_guess = Start.GUI.get_string("Guess", "Give me a key to try:")
 		
 		if key_guess is not None:
 		
-
 			guess_numb -= 1
 
 			try:
@@ -135,7 +136,7 @@ class Encrypt():
 				
 				if Decimal(key_guess) / Decimal(str(53475874637)) == 9.0:
 
-					file_read = codecs.open(file, 'r', encoding="utf-8")
+					file_read = open(file, 'r')
 					lines = file_read.readlines()
 
 
@@ -144,87 +145,87 @@ class Encrypt():
 
 					file_read.close()
 
-					file_write = codecs.open(file, 'w', encoding="utf-8")
+					file_write = open(file, 'w')
 					file_write.writelines(result)
-					start.gui.write(result + "\n")
+					Start.GUI.write(result + "\n")
 					return
 
 
 				if guess_numb < 1:
-					start.gui.write("You have no more guesses.\n")
+					Start.GUI.write("You have no more guesses.\n")
 
-					file_read = codecs.open(file, 'r', encoding="utf-8")
+					file_read = open(file, 'r')
 					lines = file_read.readlines()
 					file_read.close()
 
 					lines[:] = []
-					file_write = codecs.open(file, 'w', encoding="utf-8")
+					file_write = open(file, 'w')
 					file_write.writelines(lines)
-					start.gui.quit()
+					Start.GUI.quit()
 
 
 				elif guess_numb == 1:
-					start.gui.write("You have " + str(guess_numb) + " guess left.\n")
+					Start.GUI.write("You have " + str(guess_numb) + " guess left.\n")
 			
-					self.Decode_File(file, guess_numb)
+					self.decode_file(file, guess_numb)
 
 
 				elif guess_numb > 1:
-					start.gui.write("You have " + str(guess_numb) + " guesses left.\n")
+					Start.GUI.write("You have " + str(guess_numb) + " guesses left.\n")
 			
-					self.Decode_File(file, guess_numb)
+					self.decode_file(file, guess_numb)
 	
 	
 			except ValueError:
-				start.gui.write("Oops!  That was not an intereger.\n")
+				Start.GUI.write("Oops!  That was not an intereger.\n")
 	
 
 				if guess_numb < 1:
-					start.gui.write("You have no more guesses.\n")
+					Start.GUI.write("You have no more guesses.\n")
 
-					file_read = codecs.open(file, 'r', encoding="utf-8")
+					file_read = open(file, 'r')
 					lines = file_read.readlines()
 					file_read.close()
 
 					lines[:] = []
-					file_write = codecs.open(file, 'w', encoding="utf-8")
+					file_write = open(file, 'w')
 					file_write.writelines(lines)
-					start.gui.quit()
+					Start.GUI.quit()
 
 
 				elif guess_numb == 1:
-					start.gui.write("You have " + str(guess_numb) + " guess left.\n")
+					Start.GUI.write("You have " + str(guess_numb) + " guess left.\n")
 			
-					self.Decode_File(file, guess_numb)
+					self.decode_file(file, guess_numb)
 
 
 				elif guess_numb > 1:
-					start.gui.write("You have " + str(guess_numb) + " guesses left.\n")
-					self.Decode_File(file, guess_numb)
+					Start.GUI.write("You have " + str(guess_numb) + " guesses left.\n")
+					self.decode_file(file, guess_numb)
 		return
 		
 
-	def decode_new_key(self, result, big_key, user_guess):
+	def decode_new_key(self, line, big_key, user_guess):
 	
-		new_result = ""
+		decode_result = ""
 		real_key = (int(big_key)/int(user_guess))
 	
-		for item in result:
-			str_ord = ord(item)
+		for char in line:
+			str_ord = ord(char)
 			
-			if str_ord >= 32 and str_ord <= 41:
+			if 32 <= str_ord <= 41:
 				str_chr = str_ord + int(real_key) + 206
-				new_result += chr(str_chr)
+				decode_result += chr(str_chr)
 				
 			elif str_ord >= 42:
 				str_chr = str_ord - int(real_key) - 1
-				new_result += chr(str_chr)	
+				decode_result += chr(str_chr)	
 				
 			else:
 				str_chr = str_ord
-				new_result += chr(str_chr)	
+				decode_result += chr(str_chr)	
 
-		return new_result
+		return decode_result
 
 
 	def decode_file_new_key(self, file, guess_numb, lines_dependant):
@@ -232,7 +233,7 @@ class Encrypt():
 		guess_result = ""
 		big_key = lines_dependant[8]
 
-		key_guess = start.gui.get_string("Guess", "Give me a key to try: ")
+		key_guess = Start.GUI.get_string("Guess", "Give me a key to try: ")
 		
 		if key_guess is not None:
 		
@@ -241,7 +242,7 @@ class Encrypt():
 				guess_result += str(ord_)
 
 			if Decimal(big_key) / Decimal(guess_result) == 9:
-				file_read = codedcs.open(file, 'r', encoding="utf-8")
+				file_read = open(file, 'r')
 				lines = file_read.readlines()
 		
 				new_result = ""
@@ -250,46 +251,46 @@ class Encrypt():
 	
 				file_read.close()
 
-				file_write = codecs.open(file, 'w', encoding="utf-8")
+				file_write = open(file, 'w')
 				file_write.writelines(new_result)
-				start.gui.write(new_result + "\n")
+				Start.GUI.write(new_result + "\n")
 				return
 
 			if guess_numb < 1:
-				start.gui.write("You have no more guesses.\n")
+				Start.GUI.write("You have no more guesses.\n")
 		
-				file_read = codecs.open(file, 'r', encoding="utf-8")
+				file_read = open(file, 'r')
 				lines = file_read.readlines()
 				file_read.close()
 		
 				lines[:] = []
-				file_write = codecs.open(file, 'w', encoding="utf-8")
+				file_write = open(file, 'w')
 				file_write.writelines(lines)
-				start.gui.quit()
+				Start.GUI.quit()
 				return
 		
 			elif guess_numb == 1:
-				start.gui.write("You have " + str(guess_numb) + " guess left.\n")
+				Start.GUI.write("You have " + str(guess_numb) + " guess left.\n")
 				guess_numb -= 1
 				self.decode_file_new_key(file, guess_numb, lines_dependant)
 	
 			else:
-				start.gui.write("You have " + str(guess_numb) + " guesses left.\n")
+				Start.GUI.write("You have " + str(guess_numb) + " guesses left.\n")
 				guess_numb -= 1
 				self.decode_file_new_key(file, guess_numb, lines_dependant)
 		
 		return
 
 		
-	def Create_Key(self, file):
+	def create_key(self, file):
 	
-		user_input = start.gui.get_string("Custom Key", "Enter a desired key:\n(alpha-numeric supported since beta 0.7.2)\n")
+		user_input = Start.GUI.get_string("Custom Key", "Enter a desired key:\n(alpha-numeric supported since beta 0.7.2)\n")
 		if user_input is not None:
 		
 			write_string = "Your new key is: " + user_input + "\nDon't lose it.\n"
-			start.gui.write(write_string)
+			Start.GUI.write(write_string)
 		
-			depend = codecs.open(file, 'r', encoding="utf-8")
+			depend = open(file, 'r')
 			lines_depend = depend.readlines()
 			result = ""
 	
@@ -307,24 +308,24 @@ class Encrypt():
 			lines_depend[7] = "big key is:" + "\n"
 			lines_depend[8] = str(new_key) + "\n"
 
-			depend = codecs.open(file, 'w', encoding="utf-8")
+			depend = open(file, 'w')
 			depend.writelines(lines_depend)
 
 			depend.close()
 		
-			start.gui.Refresh_time(1500)
+			Start.GUI.refresh_time(1500)
 		return
 		
 		
-	def Create_Key_Check(self, file):
+	def create_key_check(self, file):
 			
-		depend = codecs.open(file, 'r', encoding="utf-8")
+		depend = open(file, 'r')
 		lines_depend = depend.readlines()
 		
 		if lines_depend[3] != "\n":
 			guess_result = ""
 			big_key = lines_depend[8]
-			key_guess = start.gui.get_string("Guess", "Please enter the current user key first. ")
+			key_guess = Start.GUI.get_string("Guess", "Please enter the current user key first. ")
 			
 			if key_guess is not None:
 			
@@ -333,50 +334,50 @@ class Encrypt():
 					guess_result += str(ord_)
 
 				if Decimal(big_key) / Decimal(guess_result) == 9:
-					self.Create_Key(file)
+					self.create_key(file)
 				else:
-					start.gui.write("Sorry, that is not the current user key.\n")
+					Start.GUI.write("Sorry, that is not the current user key.\n")
 		else:
-			self.Create_Key(file)
+			self.create_key(file)
 	
 	
-	def Switch_to_user_key_mode(self, file):
+	def switch_to_user_key_mode(self, file):
 	
-		depend = codecs.open(file, 'r', encoding="utf-8")
+		depend = open(file, 'r')
 		lines_depend = depend.readlines()
 		lines_depend[0] = "user_key" + "\n"
 
-		depend = codecs.open(file, 'w', encoding="utf-8")
+		depend = open(file, 'w')
 		depend.writelines(lines_depend)
 
 		depend.close()
 		
-		start.gui.Refresh()
+		Start.GUI.refresh()
 		
 		
-	def Default_Key(self, file):
+	def default_key(self, file):
 	
-		depend = codecs.open(file, 'r', encoding="utf-8")
+		depend = open(file, 'r')
 		lines_depend = depend.readlines()
 		lines_depend[0] = "default_key" + "\n"
-		depend = codecs.open(file, 'w', encoding="utf-8")
+		depend = open(file, 'w')
 		depend.writelines(lines_depend)
 		
 		depend.close()
 
-		start.gui.Refresh()
+		Start.GUI.refresh()
 		return
 				
 				
 class Crypto(Frame):
 
 
-	def initUI(self, parent):
+	def init_ui(self, parent):
 		Frame.__init__(self, parent)
 		self.parent = parent
 		
 		depend_file = "Depend.txt"
-		dependant = codecs.open(depend_file, 'r', encoding="utf-8")
+		dependant = open(depend_file, 'r')
 		self.lines_dependant = dependant.readlines()
 		
 		title_string = "Crypto Version " + Version
@@ -386,25 +387,25 @@ class Crypto(Frame):
 		menubar = Menu(self.parent)
 		self.parent.config(menu=menubar)
 
-		Encode_button = Button(self, text="Encode", command=self.File_Dialogue_Encode)
+		Encode_button = Button(self, text="Encode", command=self.file_dialogue_encode)
 		Encode_button.pack()
 
 
 		if self.lines_dependant[0] != "user_key\n":
 		
-			Decode_button = Button(self, text="Decode", command=self.File_Dialogue_Decode)
+			Decode_button = Button(self, text="Decode", command=self.file_dialogue_decode)
 			Decode_button.pack()
 
-			Switch_mode_button = Button(self, text="Set Custom Key", command=lambda: self.Create_and_Quit(depend_file))
+			Switch_mode_button = Button(self, text="Set Custom Key", command=lambda: self.create_and_quit(depend_file))
 			Switch_mode_button.pack()
 
 
 		else:
 		
-			Decode_button = Button(self, text="Decode", command=lambda: self.File_Dialogue_Decode_User_Key(self.lines_dependant))
+			Decode_button = Button(self, text="Decode", command=lambda: self.file_dialogue_decode_user_key(self.lines_dependant))
 			Decode_button.pack()
 			
-			Switch_mode_button = Button(self, text="Set Default Key", command=lambda: self.Default_and_Quit(depend_file))
+			Switch_mode_button = Button(self, text="Set Default Key", command=lambda: self.default_and_quit(depend_file))
 			Switch_mode_button.pack()
 
 			
@@ -413,45 +414,45 @@ class Crypto(Frame):
 		self.pack()
 
 		
-	def File_Dialogue_Encode(self):
+	def file_dialogue_encode(self):
 		dlg = tkFileDialog.Open(self)
 		file = dlg.show()
 		if file != "":
-			start.Encode_Object.Encode_File(file)
+			Start.Encode_Object.encode_file(file)
 		
 		
-	def File_Dialogue_Decode(self):
+	def file_dialogue_decode(self):
 		dlg = tkFileDialog.Open(self)
 		file = dlg.show()
 		if file != "":
-			start.Encode_Object.Decode_File(file, 4)
+			Start.Encode_Object.Decode_File(file, 4)
 		
 		
-	def File_Dialogue_Decode_User_Key(self, lines_dependant):
+	def file_dialogue_decode_user_key(self, lines_dependant):
 		dlg = tkFileDialog.Open(self)
 		file = dlg.show()
 		if file != "":
-			start.Encode_Object.decode_file_new_key(file, 3, lines_dependant)
+			Start.Encode_Object.decode_file_new_key(file, 3, lines_dependant)
 
 
-	def Create_and_Quit(self, depend_file):
+	def create_and_quit(self, depend_file):
 		if self.lines_dependant[3] != "\n":
 			Overwrite_key_Option = askquestion("User Key Found!", "There is already a user key, would you like to overwrite it?")
 			
 			
 			if Overwrite_key_Option == "yes":
-				start.Encode_Object.Create_Key_Check(depend_file)
+				Start.Encode_Object.create_key_check(depend_file)
 			
 			
 			elif Overwrite_key_Option == "no":
-				start.Encode_Object.Switch_to_user_key_mode(depend_file)
+				Start.Encode_Object.switch_to_user_key_mode(depend_file)
 					
 		else:		
-			start.Encode_Object.Create_Key_Check(depend_file)
+			Start.Encode_Object.create_key_check(depend_file)
 
 
-	def Default_and_Quit(self, depend_file):
-		start.Encode_Object.Default_Key(depend_file)
+	def default_and_quit(self, depend_file):
+		Start.Encode_Object.default_key(depend_file)
 
 
 	def write(self, txt):
@@ -463,31 +464,31 @@ class Crypto(Frame):
 		return string
 	
 	
-	def Refresh(self):
+	def refresh(self):
 		self.pack_forget()
-		self.initUI(self.parent)
+		self.init_ui(self.parent)
 		
 		
-	def Refresh_time(self, time_to_sleep):
+	def refresh_time(self, time_to_sleep):
 		sys.stdout.flush()
-		self.after(time_to_sleep, self.Refresh)
+		self.after(time_to_sleep, self.refresh)
 	
 	
 	
-class main():
+class Main():
 
 
 	def __main__(self):
 
 		self.root = Tk()
 		self.Encode_Object = Encrypt(self.root)
-		self.gui = Crypto()
-		self.gui.initUI(self.root)
+		self.GUI = Crypto()
+		self.GUI.init_ui(self.root)
 		self.root.geometry("300x250+300+300")
 		self.root.mainloop()  
 
 
 #def begin():
 if __name__ == "__main__":
-	start = main()
-	start.__main__()
+	Start = Main()
+	Start.__main__()
